--- a/proj08_visualizacoes/projeto/templates/index.html
+++ b/proj08_visualizacoes/projeto/templates/index.html
@@ -50,7 +50,7 @@
       </div>
 
       <figure class="highcharts-figure">
-        <div id="container"></div>
+        <div id="container-charts"></div>
       </figure>
 
     </div>
